- ALL: many small, but possibly breaking, changes:
  - Source: not all getters were correctly implemented. However, most errors had low risk
    of appearing in live situations.
  - Source: stricter type handling.
  - Extract number from order or invoice reference: changed, should be more logical now.
  - Call parent method more often, even if it is currently a no-op.


8.0.1 (2023-07-25) (WC)
-----------------------
Bugs:
- DomainException: type: not an allowed value: 0 in .../Data/AcumulusProperty.php:207.
- TypeError: Siel\Acumulus\Helpers\Countries::isNl(): Argument #1 ($countryCode) must be
  of type string, null given, called in src/Completors/Legacy/Completor.php on line 1531
  and defined in src/Helpers/Countries.php:26
- TypeError: preg_replace(): Argument #3 ($subject) must be of type array|string, int
  given in src/Completors/Invoice/CompleteInvoiceNumber.php:51
- Error: Call to protected method
  Siel\Acumulus\Completors\Legacy\Completor::changeInvoiceToConcept() from context
  'Siel\Acumulus\Completors\Legacy\CompletorInvoiceLines' in
  siel/acumulus/src/Completors/Legacy/CompletorInvoiceLines.php:262
- PC|OC: PHP Fatal error: Uncaught Exception: Error: Duplicate entry '1' for key
  'acumulus_idx_entry_id'<br />Error No: 1062<br />INSERT INTO `oc_acumulus_entry`
  (store_id, entry_id, token, source_type, source_id, updated) VALUES (0, 1, 'Send locked,
  delete if too old', 'Order', ..., '...')
  Drop and recreate index (to make it non-unique). Already done in 6.0.0, but the create
  statement was not adapted, so users who started using this module after 6.0.0, but
  before 8.0.1, will still get a unique index.


8.0.0 (2023-07-14) (WC)
-----------------------
Features:
- Support for alternative address. You can now send the invoice and shipping address to
  Acumulus and you define which address becomes the main and which becomes the alternative
  address.

Bugs:
- ValueError: DOMDocument::loadHTML(): Argument #1 ($source) must not be empty